--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 	</div>
 
 	<ul id="mb-menu">
-        <li><a href="#">ABOUT US</a>
+        <li><a href="https://koochaeeun.github.io/aboutUs/">ABOUT US</a>
               <ul class="mb-submenu">
-				<li><a href="#">브랜드스토리</a></li>
+				<li><a href="https://koochaeeun.github.io/aboutUs/">브랜드스토리</a></li>
                 <li><a href="#">연혁</a></li>
                 <li><a href="#">수상내역</a></li>
                 <li><a href="#">오시는 길</a></li>
                 <li><a href="#">채용</a></li>
               </ul>
         </li>
-        <li><a href="#">HOTELS</a>
+        <li><a href="https://koochaeeun.github.io/aboutUs/">HOTELS</a>
                 <ul class="mb-submenu">
-                  <li><a href="#">서울신라호텔</a></li>
-                  <li><a href="#">제주신라호텔</a></li>
-                  <li><a href="#">신라모노그램</a></li>
-                  <li><a href="#">신라스테이</a></li>
+                  <li><a href="https://koochaeeun.github.io/aboutUs/#sect2">서울신라호텔</a></li>
+                  <li><a href="https://koochaeeun.github.io/aboutUs/#sect3">제주신라호텔</a></li>
+                  <li><a href="https://koochaeeun.github.io/aboutUs/#sect4">신라모노그램</a></li>
+                  <li><a href="https://koochaeeun.github.io/aboutUs/#sect5">신라스테이</a></li>
                 </ul>
         </li>
         <li><a href="#">OFFERS</a>
@@ -86,7 +86,7 @@
 		<li><a href="#">MY PAGE</a>
 			<ul class="mb-submenu">
 			<li><a href="#">My Page</a></li>
-			<li><a href="#">예약확인</a></li>
+			<li><a href="https://koochaeeun.github.io/booking/">예약하기</a></li>
 			<li><a href="#">쿠폰확인</a></li>
 			<li><a href="#">관심리스트</a></li>
 			</ul>
@@ -124,10 +124,10 @@
 
 	<ul id="nav_all">
 
-		<li class="mainmenu"><a href="file:///C:/Users/gcy68/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/brandstory-8%ED%95%99/brand.html#sect1">ABOUT US</a>
+		<li class="mainmenu"><a href="https://koochaeeun.github.io/aboutUs/">ABOUT US</a>
 			<hr>
 			<ul class="submenu">
-				<li><a href="file:///C:/Users/gcy68/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/brandstory-8%ED%95%99/brand.html#sect1">브랜드 스토리</a></li>
+				<li><a href="https://koochaeeun.github.io/aboutUs/">브랜드 스토리</a></li>
 				<li><a href="#">연혁</a></li>
 				<li><a href="#">수상내역</a></li>
 				<li><a href="#">오시는길</a></li>
@@ -135,14 +135,14 @@
 			</ul>
 		</li>
 
-		<li class="mainmenu"><a href="file:///C:/Users/gcy68/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/brandstory-8%ED%95%99/brand.html#sect1">HOTELS</a>
+		<li class="mainmenu"><a href="https://koochaeeun.github.io/aboutUs/">HOTELS</a>
 			<div class="hotels">
 				<hr>
 			<ul class="submenu">
-				<li><a href="#">서울신라호텔</a></li>
-				<li><a href="#">제주신라호텔</a></li>
-				<li><a href="#">신라모노그램</a></li>
-				<li><a href="#">신라스테이</a></li>
+				<li><a href="https://koochaeeun.github.io/aboutUs/#sect2">서울신라호텔</a></li>
+				<li><a href="https://koochaeeun.github.io/aboutUs/#sect3">제주신라호텔</a></li>
+				<li><a href="https://koochaeeun.github.io/aboutUs/#sect4">신라모노그램</a></li>
+				<li><a href="https://koochaeeun.github.io/aboutUs/#sect5">신라스테이</a></li>
 			</ul>
 			</div>
 		</li>
@@ -198,7 +198,7 @@
 				<hr>
 			<ul class="submenu">
 				<li><a href="#">My Page</a></li>
-				<li><a href="#">예약확인</a></li>
+				<li><a href="https://koochaeeun.github.io/booking/">예약하기</a></li>
 				<li><a href="#">쿠폰/포인트</a></li>
 				<li><a href="#">관심리스트</a></li>
 			</ul>
@@ -210,9 +210,8 @@
 
 </header>
 
-<div class="swiper"> <!-- 가장 상위 박스이름은 .swipper 로 지정한다 -->
-	<div class="swiper-wrapper"> <!-- 그다음 박스이름은 .swiper-wrapper  로 지정한다 -->
-		<!-- 슬라이드 한장 한장의 이름은 .swiper-slide 로 지정한다  -->
+<div class="swiper">
+	<div class="swiper-wrapper"> 
 		<div class="swiper-slide"><img src="img/slide1.jpg"></div> 
 		<div class="swiper-slide"><img src="img/slide2.jpg"></div> 
 		<div class="swiper-slide"><img src="img/slide3.jpg"></div> 
@@ -243,7 +242,7 @@
 <div id="mb-effect">
 
 <aside id="banner">
-	<a href="file:///C:/Users/gcy68/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/book/book.html"><div class="booking">
+	<a href="https://koochaeeun.github.io/booking/"><div class="booking">
 		<img src="img/booking.png" alt="booking">
 		<p>간편 예약</p>
 	</div></a>
@@ -256,7 +255,7 @@
 <div id="reserv">
 	<div class="reserv-box">
 		<p>새로워진 온라인 예약으로 빠르고 간편하게 예약 및 조회해보세요.</p>
-		<a href="file:///C:/Users/gcy68/OneDrive/%EB%B0%94%ED%83%95%20%ED%99%94%EB%A9%B4/book/book.html">예약 바로가기 &gt</a>
+		<a href="https://koochaeeun.github.io/booking/">예약 바로가기 &gt</a>
 	</div>
 </div>
 
@@ -637,7 +636,7 @@
 </div><!--end of main_contents-->
 
 <div id="content">
-	<a href="">
+	<a href="https://koochaeeun.github.io/aboutUs/">
 	<div class="content_box">
 		<img src="img/about.jpg" alt="about">
 		<div class="contnent_txt">
